<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layoutDescription="@xml/fragment_menu_scene">

    <Button
        android:id="@+id/newButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="@string/newin"
        android:textSize="10sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/holdButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:backgroundTint="#30A59A"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/hold"
        android:textSize="10sp" />

    <Button
        android:id="@+id/scheButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:backgroundTint="#FFDC73"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="予定"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btnFin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:backgroundTint="#4295D8"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="完"
        android:textSize="12sp" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:backgroundTint="#FF5F5F"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/log"
        android:textSize="10sp" />


</LinearLayout>